# noop-allocator

./: CHANGELOG.md  Cargo.toml  README.md  rustfmt.toml
src/: lib.rs  owning_ref.rs  owning_slice.rs
