[package]
name = "noop-allocator"
version = "0.1.1"
authors = ["Zachary S"]
edition = "2021"
description = "An `Allocator` that does nothing."
readme = "README.md"
license = "MIT OR Apache-2.0"
categories = ["no-std", "memory-management"]
keywords = ["no_std", "noop", "allocator", "unstable", "nightly"]
repository = "https://github.com/zachs18/noop-allocator"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
